spacing issue on list after last commit

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -126,10 +126,12 @@ input {
 
 #exam_questions li {
   font-size: 20px;
+  margin-bottom: 15px;
 }
 
 #exam_answers li {
   font-size: 20px;
+  margin-bottom: 15px;
 }
 
 #comment_area {
